<resources>
    <string name="app_name">Android Pair Matching Application</string>
    <string name="android_pair_matching_application">Android Pair Matching Application</string>
    <string name="state">state</string>
    <string name="title">title</string>
    <string name="download">Download:\u0020</string>
    <string name="play">Play:\u0020</string>
    <string name="nullTitle">Null\u0020</string>
    <string name="scoreTitle">Score:\u0020</string>
    <string name="score">score</string>
    <string name="initialScore">0</string>
    <string name="percent">%</string>
    <string name="click_mode">Click Mode</string>
    <string name="drag_mode">Drag Mode</string>
    <string name="play_list">Play List</string>
    <string name="download_list">Download List</string>
    <string name="Choose_Game_Type">Choose Game Type</string>
    <string name="size">Size:\u0020</string>
    <string name="all">All</string>
    <string name="reset">Reset</string>
    <string name="internet">No Internet Connection</string>
    <string name="download_puzzle">Downloading Puzzle</string>
    <string name="downloading_puzzle">Currently Downloading Puzzle</string>
    <string name="dialog_fragment">dialog_fragment_game_type_choice</string>
    <string name="error">Image Does Not Exist And Network Error</string>
</resources>
