<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    >
    <TextView
        android:id="@+id/state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/state"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:paddingTop="5dp"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:paddingRight="0dp"
        android:paddingEnd="0dp"
        android:paddingBottom="5dp"
        />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:paddingTop="5dp"
        android:paddingLeft="0dp"
        android:paddingStart="0dp"
        android:paddingRight="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="5dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scoreTitle"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:paddingTop="5dp"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        android:paddingRight="0dp"
        android:paddingEnd="0dp"
        android:paddingBottom="5dp"
        />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:paddingTop="5dp"
        android:paddingLeft="0dp"
        android:paddingStart="0dp"
        android:paddingRight="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp"
        />
</LinearLayout>