<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".click_game.click_game_activity"
    android:orientation="vertical"
    >
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".click_game.click_game_activity"
        android:orientation="horizontal"
        android:gravity="start"
        >
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            tools:context=".click_game.click_game_activity"
            android:paddingTop="5dp"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp"
            >
            <Button
                android:id="@+id/resetButton"
                android:text="@string/reset"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_template"
                android:shadowColor="#A8A8A8"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="5"
                />
        </LinearLayout>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".click_game.click_game_activity"
            android:orientation="horizontal"
            android:gravity="end"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scoreTitle"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                android:paddingTop="15dp"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:paddingRight="0dp"
                android:paddingEnd="0dp"
                android:paddingBottom="0dp"
                />

            <TextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"
                android:paddingTop="15dp"
                android:paddingLeft="0dp"
                android:paddingStart="0dp"
                android:paddingRight="0dp"
                android:paddingEnd="0dp"
                android:paddingBottom="0dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/percent"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"
                android:paddingTop="15dp"
                android:paddingLeft="0dp"
                android:paddingStart="0dp"
                android:paddingRight="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="0dp"
                />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/game"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".click_game.click_game_activity"
        />
</LinearLayout>